add change password endpoint and it's automated test
