# docs/openapi.yaml
@@ -24,6 +24,30 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /api/v1/users/change-password:
+        post:
+            tags:
+                - UserService
+            operationId: UserService_ChangePassword
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/ChangePasswordRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/SuccessResponse'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /api/v1/users/createrole:
         post:
             tags:
@@ -182,6 +206,16 @@ paths:
                                 $ref: '#/components/schemas/Status'
 components:
     schemas:
+        ChangePasswordRequest:
+            type: object
+            properties:
+                email:
+                    type: string
+                password:
+                    type: string
+                otpCode:
+                    type: integer
+                    format: int32
         GetUsersResponse:
             type: object
             properties:
@@ -222,17 +256,14 @@ components:
                     type: integer
                     description: The status code, which should be an enum value of [google.rpc.Code][google.rpc.Code].
                     format: int32
-                code_detail:
-                    type: string
-                    # description: A developer-facing error message, which should be in English. Any user-facing error message should be localized and sent in the [google.rpc.Status.details][google.rpc.Status.details] field, or localized by the client.
                 message:
                     type: string
                     description: A developer-facing error message, which should be in English. Any user-facing error message should be localized and sent in the [google.rpc.Status.details][google.rpc.Status.details] field, or localized by the client.
-                # details:
-                #     type: array
-                #     items:
-                #         $ref: '#/components/schemas/GoogleProtobufAny'
-                #     description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
+                details:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/GoogleProtobufAny'
+                    description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
             description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
         SuccessResponse:
             type: object
