# domain/proto/user/userconnect/user.connect.go
@@ -50,19 +50,23 @@ const (
 	UserServiceResendOtpProcedure = "/proto.UserService/ResendOtp"
 	// UserServiceGetOwnDataProcedure is the fully-qualified name of the UserService's GetOwnData RPC.
 	UserServiceGetOwnDataProcedure = "/proto.UserService/GetOwnData"
+	// UserServiceChangePasswordProcedure is the fully-qualified name of the UserService's
+	// ChangePassword RPC.
+	UserServiceChangePasswordProcedure = "/proto.UserService/ChangePassword"
 )
 
 // These variables are the protoreflect.Descriptor objects for the RPCs defined in this package.
 var (
-	userServiceServiceDescriptor          = user.File_proto_user_user_proto.Services().ByName("UserService")
-	userServiceGetUsersMethodDescriptor   = userServiceServiceDescriptor.Methods().ByName("GetUsers")
-	userServiceLoginMethodDescriptor      = userServiceServiceDescriptor.Methods().ByName("Login")
-	userServiceRegisterMethodDescriptor   = userServiceServiceDescriptor.Methods().ByName("Register")
-	userServiceCreateRoleMethodDescriptor = userServiceServiceDescriptor.Methods().ByName("CreateRole")
-	userServiceGetRoleMethodDescriptor    = userServiceServiceDescriptor.Methods().ByName("GetRole")
-	userServiceVerifyOtpMethodDescriptor  = userServiceServiceDescriptor.Methods().ByName("VerifyOtp")
-	userServiceResendOtpMethodDescriptor  = userServiceServiceDescriptor.Methods().ByName("ResendOtp")
-	userServiceGetOwnDataMethodDescriptor = userServiceServiceDescriptor.Methods().ByName("GetOwnData")
+	userServiceServiceDescriptor              = user.File_proto_user_user_proto.Services().ByName("UserService")
+	userServiceGetUsersMethodDescriptor       = userServiceServiceDescriptor.Methods().ByName("GetUsers")
+	userServiceLoginMethodDescriptor          = userServiceServiceDescriptor.Methods().ByName("Login")
+	userServiceRegisterMethodDescriptor       = userServiceServiceDescriptor.Methods().ByName("Register")
+	userServiceCreateRoleMethodDescriptor     = userServiceServiceDescriptor.Methods().ByName("CreateRole")
+	userServiceGetRoleMethodDescriptor        = userServiceServiceDescriptor.Methods().ByName("GetRole")
+	userServiceVerifyOtpMethodDescriptor      = userServiceServiceDescriptor.Methods().ByName("VerifyOtp")
+	userServiceResendOtpMethodDescriptor      = userServiceServiceDescriptor.Methods().ByName("ResendOtp")
+	userServiceGetOwnDataMethodDescriptor     = userServiceServiceDescriptor.Methods().ByName("GetOwnData")
+	userServiceChangePasswordMethodDescriptor = userServiceServiceDescriptor.Methods().ByName("ChangePassword")
 )
 
 // UserServiceClient is a client for the proto.UserService service.
@@ -75,6 +79,7 @@ type UserServiceClient interface {
 	VerifyOtp(context.Context, *connect.Request[user.VerifyOTPRequest]) (*connect.Response[user.SuccessResponse], error)
 	ResendOtp(context.Context, *connect.Request[user.ResendOTPRequest]) (*connect.Response[user.SuccessResponse], error)
 	GetOwnData(context.Context, *connect.Request[emptypb.Empty]) (*connect.Response[user.SuccessResponse], error)
+	ChangePassword(context.Context, *connect.Request[user.ChangePasswordRequest]) (*connect.Response[user.SuccessResponse], error)
 }
 
 // NewUserServiceClient constructs a client for the proto.UserService service. By default, it uses
@@ -135,19 +140,26 @@ func NewUserServiceClient(httpClient connect.HTTPClient, baseURL string, opts ..
 			connect.WithSchema(userServiceGetOwnDataMethodDescriptor),
 			connect.WithClientOptions(opts...),
 		),
+		changePassword: connect.NewClient[user.ChangePasswordRequest, user.SuccessResponse](
+			httpClient,
+			baseURL+UserServiceChangePasswordProcedure,
+			connect.WithSchema(userServiceChangePasswordMethodDescriptor),
+			connect.WithClientOptions(opts...),
+		),
 	}
 }
 
 // userServiceClient implements UserServiceClient.
 type userServiceClient struct {
-	getUsers   *connect.Client[user.GetUsersRequest, user.GetUsersResponse]
-	login      *connect.Client[user.UserLoginRequest, user.SuccessResponse]
-	register   *connect.Client[user.UserRegisterRequest, user.SuccessResponse]
-	createRole *connect.Client[user.Role, user.SuccessResponse]
-	getRole    *connect.Client[emptypb.Empty, user.SuccessResponse]
-	verifyOtp  *connect.Client[user.VerifyOTPRequest, user.SuccessResponse]
-	resendOtp  *connect.Client[user.ResendOTPRequest, user.SuccessResponse]
-	getOwnData *connect.Client[emptypb.Empty, user.SuccessResponse]
+	getUsers       *connect.Client[user.GetUsersRequest, user.GetUsersResponse]
+	login          *connect.Client[user.UserLoginRequest, user.SuccessResponse]
+	register       *connect.Client[user.UserRegisterRequest, user.SuccessResponse]
+	createRole     *connect.Client[user.Role, user.SuccessResponse]
+	getRole        *connect.Client[emptypb.Empty, user.SuccessResponse]
+	verifyOtp      *connect.Client[user.VerifyOTPRequest, user.SuccessResponse]
+	resendOtp      *connect.Client[user.ResendOTPRequest, user.SuccessResponse]
+	getOwnData     *connect.Client[emptypb.Empty, user.SuccessResponse]
+	changePassword *connect.Client[user.ChangePasswordRequest, user.SuccessResponse]
 }
 
 // GetUsers calls proto.UserService.GetUsers.
@@ -190,6 +202,11 @@ func (c *userServiceClient) GetOwnData(ctx context.Context, req *connect.Request
 	return c.getOwnData.CallUnary(ctx, req)
 }
 
+// ChangePassword calls proto.UserService.ChangePassword.
+func (c *userServiceClient) ChangePassword(ctx context.Context, req *connect.Request[user.ChangePasswordRequest]) (*connect.Response[user.SuccessResponse], error) {
+	return c.changePassword.CallUnary(ctx, req)
+}
+
 // UserServiceHandler is an implementation of the proto.UserService service.
 type UserServiceHandler interface {
 	GetUsers(context.Context, *connect.Request[user.GetUsersRequest]) (*connect.Response[user.GetUsersResponse], error)
@@ -200,6 +217,7 @@ type UserServiceHandler interface {
 	VerifyOtp(context.Context, *connect.Request[user.VerifyOTPRequest]) (*connect.Response[user.SuccessResponse], error)
 	ResendOtp(context.Context, *connect.Request[user.ResendOTPRequest]) (*connect.Response[user.SuccessResponse], error)
 	GetOwnData(context.Context, *connect.Request[emptypb.Empty]) (*connect.Response[user.SuccessResponse], error)
+	ChangePassword(context.Context, *connect.Request[user.ChangePasswordRequest]) (*connect.Response[user.SuccessResponse], error)
 }
 
 // NewUserServiceHandler builds an HTTP handler from the service implementation. It returns the path
@@ -256,6 +274,12 @@ func NewUserServiceHandler(svc UserServiceHandler, opts ...connect.HandlerOption
 		connect.WithSchema(userServiceGetOwnDataMethodDescriptor),
 		connect.WithHandlerOptions(opts...),
 	)
+	userServiceChangePasswordHandler := connect.NewUnaryHandler(
+		UserServiceChangePasswordProcedure,
+		svc.ChangePassword,
+		connect.WithSchema(userServiceChangePasswordMethodDescriptor),
+		connect.WithHandlerOptions(opts...),
+	)
 	return "/proto.UserService/", http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		switch r.URL.Path {
 		case UserServiceGetUsersProcedure:
@@ -274,6 +298,8 @@ func NewUserServiceHandler(svc UserServiceHandler, opts ...connect.HandlerOption
 			userServiceResendOtpHandler.ServeHTTP(w, r)
 		case UserServiceGetOwnDataProcedure:
 			userServiceGetOwnDataHandler.ServeHTTP(w, r)
+		case UserServiceChangePasswordProcedure:
+			userServiceChangePasswordHandler.ServeHTTP(w, r)
 		default:
 			http.NotFound(w, r)
 		}
@@ -313,4 +339,8 @@ func (UnimplementedUserServiceHandler) ResendOtp(context.Context, *connect.Reque
 
 func (UnimplementedUserServiceHandler) GetOwnData(context.Context, *connect.Request[emptypb.Empty]) (*connect.Response[user.SuccessResponse], error) {
 	return nil, connect.NewError(connect.CodeUnimplemented, errors.New("proto.UserService.GetOwnData is not implemented"))
+}
+
+func (UnimplementedUserServiceHandler) ChangePassword(context.Context, *connect.Request[user.ChangePasswordRequest]) (*connect.Response[user.SuccessResponse], error) {
+	return nil, connect.NewError(connect.CodeUnimplemented, errors.New("proto.UserService.ChangePassword is not implemented"))
 }
